--- a/views/main.html
+++ b/views/main.html
@@ -9,37 +9,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">BTC Admin v0.1</a>
+            <a class="navbar-brand" href="index.html">DENR EMB</a>
         </div>
         <!-- /.navbar-header -->
-
-        <ul class="nav navbar-top-links navbar-right">
-            <!-- /.dropdown -->
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                </a>
-                <ul class="dropdown-menu dropdown-user">
-                    <li><a><i class="fa fa-user fa-fw"></i> User Profile</a>
-                    </li>
-                    <li><a><i class="fa fa-gear fa-fw"></i> Settings</a>
-                    </li>
-                    <li class="divider"></li>
-                    <li><a><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                    </li>
-                </ul>
-                <!-- /.dropdown-user -->
-            </li>
-            <!-- /.dropdown -->
-        </ul>
-        <!-- /.navbar-top-links -->
 
         <div class="navbar-default sidebar" role="navigation">
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
                     
                     <li>
-                        <a ng-href="#!/main"><i class="fa fa-list-ul fa-fw"></i> Verifications</a>
+                        <a ng-href="#!/main"><i class="fa fa-list-ul fa-fw"></i> Emission Inventory</a>
                     </li>
                     
                 </ul>
@@ -52,8 +31,9 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Verifications</h1>
-            </div>
+                <h1 class="page-header">2015 EI Compilation <button class="col-lg-3 pull-right btn btn-success">Add Entry</button></h1>
+                
+            </div>                       
             <!-- /.col-lg-12 -->
             <div class="row">
                 <div class="col-lg-12">
@@ -61,11 +41,20 @@
                         <table class="table table-striped table-bordered" >
                             <thead>
                                 <tr>
-                                    <th class="col-md-1">ID</th>
-                                    <th class="col-md-1">Verification Applied Date</th>
-                                    <th class="col-md-1">ID Image</th>
-                                    <th class="col-md-1">Status</th>
-                                    <th class="col-md-1">Action</th>
+                                    <th class="col-md-1">REGION</th>
+                                    <th class="col-md-1">SOURCE</th>
+                                    <th class="col-md-1">PM</th>
+                                    <th class="col-md-1">REGIONAL %</th>
+                                    <th class="col-md-1">CO</th>
+                                    <th class="col-md-1">REGIONAL %</th>
+                                    <th class="col-md-1">NOX</th>
+                                    <th class="col-md-1">REGIONAL %</th>
+                                    <th class="col-md-1">SOX</th>
+                                    <th class="col-md-1">REGIONAL % </th>
+                                    <th class="col-md-1">VOC</th>
+                                    <th class="col-md-1">REGIONAL % </th>
+                                    <th class="col-md-1">TOTAL</th>
+                                    <th class="col-md-1">REGIONAL % </th>
                                 </tr>
                             </thead>
                             <tbody>
