--- a/views/main.html
+++ b/views/main.html
@@ -3,10 +3,10 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">2015 EI Compilation
+                <h1 class="page-header">{{selected_year}} EI Compilation
                     <button class="col-lg-2 pull-right btn btn-success">Add Entry</button>
                     <button class="col-lg-2 pull-right btn btn-success" ng-click="addRegion()">Add Region</button>
-                    <button class="col-lg-2 pull-right btn btn-success" ng-click="addYear(2017)">Add Year</button>
+                    <button class="col-lg-2 pull-right btn btn-success" ng-click="addYear()" ng-disabled="addYearDisabled == true">Add Year</button>
                 </h1>
                 
             </div>   
