--- a/views/modal-year.html
+++ b/views/modal-year.html
@@ -1,12 +1,11 @@
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" aria-label="Close" ng-click="$ctrl.cancel()"><span aria-hidden="true">&times;</span></button>
-    <h4 class="modal-title">Add Region</h4>
+    <h4 class="modal-title">Add Year</h4>
   </div>
   <div class="modal-body">
-    <div>{{$ctrl.resolve.year}}</div>
     <div class="form-group">
-      <label class="control-label">Region</label>
+      <label class="control-label">Year</label>
       <input type="text" class="form-control" name="" ng-model="$ctrl.value">
     </div>
   </div>
