DEV: Filter used year

--- a/views/main.html
+++ b/views/main.html
@@ -3,7 +3,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">{{selected_year}} EI Compilation
+                <h1 class="page-header">{{selected_year}}<!--  EI Compilation -->
                     <button class="col-lg-2 pull-right btn btn-success">Add Entry</button>
                     <button class="col-lg-2 pull-right btn btn-success" ng-click="addRegion()">Add Region</button>
                     <button class="col-lg-2 pull-right btn btn-success" ng-click="addYear()" ng-disabled="addYearDisabled == true">Add Year</button>
