--- a/views/modal-region.html
+++ b/views/modal-region.html
@@ -4,7 +4,10 @@
     <h4 class="modal-title">Add Region</h4>
   </div>
   <div class="modal-body">
-    <div>{{$ctrl.resolve.year}}</div>
+    <div class="form-group">
+      <label class="control-label">Year</label>
+      <input type="text" class="form-control" name="" ng-model="$ctrl.resolve.year.year" ng-disabled="true">
+    </div>
     <div class="form-group">
       <label class="control-label">Region</label>
       <input type="text" class="form-control" name="" ng-model="$ctrl.value">
