--- a/views/main.html
+++ b/views/main.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="table-responsive">
-                        <table ng-show="hasReadings" class="table table-striped table-bordered" style="overflow: auto; white-space: nowrap;" >
+                        <table ng-show="hasReadings()" class="table table-striped table-bordered" style="overflow: auto; white-space: nowrap;" >
                             <thead>
                                 <tr>
                                     <th>REGION</th>
@@ -25,10 +25,10 @@
                                 </tr>
                             </thead>
 
-                            <tbody ng-repeat="region in year.regions">
+                            <tbody ng-repeat="region in selected_year.regions">
                                 <tr>
                                     <!-- region -->
-                                    <td rowspan="3" class="labels">{{region}}</td>
+                                    <td rowspan="3" class="labels">{{region.region}}</td>
                                     <!-- stationary -->
                                     <td class="labels">
                                         Station
@@ -66,7 +66,7 @@
                             </tbody>
                         </table>
 
-                        <div class="labels" ng-hide="hasReadings" style="margin-top: 50px;">No Data to display.</div>
+                        <div class="labels" ng-hide="hasReadings()" style="margin-top: 50px;">No Data to display.</div>
                     </div>
                 </div>
             </div>
