--- a/views/main.html
+++ b/views/main.html
@@ -4,12 +4,20 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">{{selected_year.year}} EI Compilation 
-                    <button class="col-lg-2 pull-right btn btn-success">Add Entry</button>
-                    <button class="col-lg-2 pull-right btn btn-success" ng-click="addRegion()" ng-disabled="addYearDisabled == true">Add Region</button>
-                    <button class="col-lg-2 pull-right btn btn-success" ng-click="addYear()" ng-disabled="addYearDisabled == true">Add Year</button>
                 </h1>
                 
             </div>   
+
+            <div class="row" style="margin: 20px;">
+                <button class="col-lg-2 btn btn-success" ng-click="addYear()" ng-disabled="addYearDisabled == true">Add Year</button>
+                
+                <button class="col-lg-2 btn btn-success" ng-click="addRegion()" ng-disabled="addYearDisabled == true">Add Region</button>
+
+                <button class="col-lg-2 btn btn-success" ng-click="addPollutant()" ng-disabled="addYearDisabled == true">Add Pollutant</button>
+
+                <button class="col-lg-2 btn btn-success">Add Entry</button>
+                
+            </div>
             <!-- /.col-lg-12 -->
             <div class="row">
                 <div class="col-lg-12">
