DEV: Retrieve entry input

--- a/views/main.html
+++ b/views/main.html
@@ -15,7 +15,7 @@
 
                 <button class="col-lg-2 btn btn-success" ng-click="addPollutant()" ng-disabled="noYearSelected()">Add Pollutant</button>
 
-                <button class="col-lg-2 btn btn-success" ng-disabled="noRegionAndPollutant()">Add Entry</button>
+                <button class="col-lg-2 btn btn-success" ng-click="addEntry()" ng-disabled="noRegionAndPollutant()">Add Entry</button>
                 
             </div>
             <!-- /.col-lg-12 -->
